# asr_wav2vec

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  sweep.yaml
asr_wav2vec/: __init__.py  asr_wav2vec.py  preprocessing.py  vocab.json
