[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "asr_wav2vec"
version = "0.0.1"
authors = [
  { name="Bryn Louise", email="bryn.louise@aalto.fi" },
]
description = "Fine-Tuning wav2vec2.0 for ASR"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["asr_wav2vec"]
